# Technopark_C-C-_solutions

./: .gitignore  .travis.yml  .travis.yml.swp  CMakeLists.txt  Makefile  README.md  linux_options_for_travis.sh  main.c
CalculatePredicate/: parallel_predicate.h  sequential_predicate.c
File_Work/: work_with_bin.c  work_with_bin.h
cmake-build/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  parallel  prog  sequential
hw-1/: CMakeLists.txt  README.md
hw-1/project/include/: CheckInput.h
hw-1/project/src/: Person.c  main.c
hw-1/project/tests/: test.cpp
hw-2/project/include/: work_with_bin.h
hw-2/project/source/: parallel_predicate.c
hw-2/project/test/: stresstesting.cpp
hw_2/: CMakeCache.txt  CMakeLists.txt  DownloadProject.cmake
hw_2/CalculatePredicate/: parallel_predicate.c  parallel_predicate.h  sequential_predicate.c  sequential_predicate.h
hw_2/File_Work/: work_with_bin.c  work_with_bin.h
hw_2/cmake-build/: CMakeCache.txt
hw_2/interface/: interface.c  interface.h
hw_2/project/CalculatePredicate/: parallel_predicate.h
hw_2/project/ERRORS/: error_mgs.c  error_msg.h
hw_2/project/include/: error_msg.h  work_with_bin.h
hw_2/test/: launch_tests_main.cpp  stresstesting.cpp  unit_testing.cpp
interface/: interface.h
project/CalculatePredicate/: parallel_predicate.c  sequential_predicate.c  sequential_predicate.h
project/include/: CheckInput.h  Person.h  config.h  count_predicate.h
project/source/: error_msg.c  main.c  parallel_predicate.c  sequential_predicate.c  work_with_bin.c
project/src/: CheckInput.c  Person.c  main.c
project/test/: launch_tests_main.cpp  stresstesting.cpp  unit_testing.cpp
project/tests/: test.cpp
test/: stresstesting.cpp
